/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.service.labconsole.labdata;

import "src/devtools/mobileharness/service/labconsole/labdata/proto/filter.proto";

option java_package = "com.google.devtools.mobileharness.service.labconsole.labdata";
option java_multiple_files = true;

// Lab Data Service API to query lab data of OmniLab.
service LabDataService {
  // Retrieves hosts information.
  rpc ListHosts(ListHostsRequest) returns (ListHostsResponse) {}

  // Retrieves devices information.
  rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse) {}
}

// TODO: Complete the request and response definition.
// Request message for ListHosts rpc.
message ListHostsRequest {
  // The filter to apply to the hosts.
  HostFilter filter = 1;
}

// Response message for ListHosts rpc.
message ListHostsResponse {}

// Request message for ListDevices rpc.
message ListDevicesRequest {
  // The filter to apply to the devices.
  DeviceFilter filter = 1;
}

// Response message for ListDevices rpc.
message ListDevicesResponse {}
